--- a/Configs/.config/hypr/hyde.conf
+++ b/Configs/.config/hypr/hyde.conf
@@ -132,3 +132,18 @@
 #Setting the Hyprlock layout will override any layout set in the ./hypr/hyprlock.sh
 # Dynamic Hyprlock layout should be set in the ./hypr/hyprlock.sh file
 # $LAYOUT_PATH=/path/to/hyprlock/layout.conf
+
+input {
+    kb_layout = us
+    follow_mouse = 1
+    kb_options = grp:alt_shift_toggle, compose:ralt
+
+    touchpad {
+        natural_scroll = no
+    }
+
+    sensitivity = 0
+    accel_profile = adaptive
+    force_no_accel = 0
+    numlock_by_default = true
+}
