--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -1,28 +1,6 @@
-## █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
-## █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
-
-# see https://wiki.hyprland.org/configuring/keywords/ for more
-# example binds, see https://wiki.hyprland.org/configuring/binds/ for more
-
-# Grouping of binds for easier management
-#  $d=[Group Name|Subgroup Name1|Subgroup Name2|...]
-# '$d' is a variable that is used to group binds together (or use another variable)
-# This is only for organization purposes and is not a defined hyprland variable
-# What we did here is to modify the Description of the binds to include the group name
-# The $d will be parsed as a separate key to be use for a GUI or something pretty
-# [Main|Subgroup1|Subgroup2|...]
-# Main - The main groupname
-# Subgroup1.. - The subgroup names can be use to avoid repeating the same description
-
-
-#*  Variables 
-# Default if commented out
-# $mainMod = Super # super / meta / windows key
-# Assign apps
-# $TERMINAL = kitty
-# $EDITOR = code
-# $EXPLORER = dolphin
-# $BROWSER = firefox
+$EDITOR = /usr/bin/vscodium --ozone-platform=wayland --enable-unsafe-webgpu --enable-features=Vulkan
+$EXPLORER = dolphin
+$BROWSER = zen-browser
 
 $wm=Window Management
 $d=[$wm]
@@ -81,6 +59,7 @@ bindd = $mainMod, T, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, E, $d file explorer , exec, $EXPLORER
 bindd = $mainMod, C, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
+bind = $mainMod, O, exec, okular
 bindd = Control Shift, Escape, $d system monitor , exec, $scrPath/sysmonlaunch.sh
 
 $d=[$l|Rofi menus]
@@ -98,10 +77,10 @@ bindd = $mainMod Shift, A, $d select rofi launcher , exec, pkill -x rofi || $scr
 
 $hc=Hardware Controls
 $d=[$hc|Audio]
-binddl  = , F10, $d toggle mute output , exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
+# binddl  = , F10, $d toggle mute output , exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
 binddl  = , XF86AudioMute,$d  toggle mute output, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-binddel = , F11, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
-binddel = , F12, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
+# binddel = , F11, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
+# binddel = , F12, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
 binddl  = , XF86AudioMicMute,$d un/mute microphone  , exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
 binddel = , XF86AudioLowerVolume, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
 binddel = , XF86AudioRaiseVolume, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
