--- a/Configs/.config/hypr/themes/theme.conf
+++ b/Configs/.config/hypr/themes/theme.conf
@@ -1,7 +1,7 @@
-#  // P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
+#  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME=Catppuccin-Mocha
-$ICON_THEME = Tela-circle-dracula
+$GTK_THEME = Graphite-Mono
+$ICON_THEME = Tela-circle-grey
 $COLOR_SCHEME = prefer-dark
 
 # Optional: The varibles above will be set automatically when the theme is loaded
@@ -9,26 +9,33 @@ $COLOR_SCHEME = prefer-dark
 
 
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
+    gaps_in = 8
+    gaps_out = 14
+    border_size = 3
+    col.active_border = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
+    col.inactive_border = rgba(404040cc) rgba(262626cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
-    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.border_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
+    col.border_inactive = rgba(404040cc) rgba(262626cc) 45deg
+    col.border_locked_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
+    col.border_locked_inactive = rgba(404040cc) rgba(262626cc) 45deg
 }
 
 decoration {
-    rounding = 10
-    shadow:enabled = false
+    rounding = 0
 
+    shadow {
+        enabled = yes
+        offset = 4 4
+        range = 0
+        render_power = 4
+        ignore_window = yes
+        color = 0xffFFFFFF
+    }
     blur {
         enabled = yes
         size = 6
@@ -39,4 +46,4 @@ decoration {
     }
 }
 
-layerrule = blur,waybar
+layerrule = unset,waybar
