--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -1,33 +1,62 @@
 
-# █░█ █▀ █▀▀ █▀█   █▀█ █▀█ █▀▀ █▀▀ █▀
-# █▄█ ▄█ ██▄ █▀▄   █▀▀ █▀▄ ██▄ █▀░ ▄█
+# █▀▀ █▄░█ █░█
+# ██▄ █░▀█ ▀▄▀
 
-# Set your personal hyprland configuration here
-# See https://wiki.hyprland.org/Configuring for more information
+# env = MANGOHUD,1
+# env = MANGOHUD_DLSYM,1
 
-# // █ █▄░█ █▀█ █░█ ▀█▀
-# // █ █░▀█ █▀▀ █▄█ ░█░
-
-
-# input {
-# # See https://wiki.hyprland.org/Configuring/Variables/#input
-#     kb_layout = us
-#     follow_mouse = 1
-#     sensitivity = 0
-#     force_no_accel = 1
-#     numlock_by_default = true
-
-#     touchpad {
-# # See https://wiki.hyprland.org/Configuring/Variables/#touchpad
-#         natural_scroll = no
-#     }
-
-# }
+misc{
+    animate_manual_resizes = true
+    enable_swallow = true
+}
 
 
-# gestures {
-# # See https://wiki.hyprland.org/Configuring/Variables/#gestures
-#     workspace_swipe = true
-#     workspace_swipe_fingers = 3
-# }
+# █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
+# █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
+# bind = Ctrl+Alt+Shift, R, pass, ^(com\.obsproject\.Studio)$ # toggle obs screen recording // install obs flatpak
+bind = $mainMod+Shift, G, exec, pkill -x rofi || $scrPath/gamelauncher.sh # launch steam game launcher // install steam
+# bind = $mainMod, Period, exec, emote # launch emoji selector // install emote
+# bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
+# bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
+#Blue light filter
+#SUPER+'=' for decreasing blue light
+#SUPER+'-' for increasing blue light
+#SUPER+'\' for reset blue light
+bind= $mainMod, EQUAL, exec,/usr/bin/wl-gammarelay-rs | busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -500
+bind= $mainMod, MINUS, exec,busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n +500
+bind= $mainMod, backslash, exec,pkill -f wl-gammarelay-rs
+
+
+# █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
+# █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
+
+# exec-once = swayidle -w timeout 600 'swaylock' timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # lock after 10 mins, sleep after 15 mins // install swayidle
+# exec-once = swayidle -w timeout 1200 'swaylock; hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' timeout 1800 'systemctl suspend' # lock and sleep after 20 mins, suspend after 30 mins // install swayidle
+# exec-once = libinput-gestures // install libinput-gestures
+# exec-once = swayosd-server # enable swayosd service
+# exec-once = `pkexec swayosd-libinput-backend` # swayosd service for keyboard input (requires to be run in a subshell)  
+exec-once = /usr/bin/wl-gammarelay-rs # blue light filter
+exec-once = /usr/bin/qbittorrent # torrent client
+exec-once = /usr/bin/kdeconnectd # kdeconnect deamon
+exec-once = export OLLAMA_HOST=0.0.0.0
+exec-once = /usr/bin/ollama serve
+
+# █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
+# ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
+
+windowrulev2 = opacity 0.95 0.95,class:^([Cc]odium)$
+windowrulev2 = opacity 0.95 0.95,class:^(zen)$
+windowrulev2 = opacity 2 2,class:^(FreeTube)$
+# windowrulev2 = opacity 0.60 0.60,class:^(steam)$
+# windowrulev2 = opacity 0.60 0.60,class:^(steamwebhelper)$
+# windowrulev2 = opacity 0.60 0.60,class:^(Spotify)$
+
+
+# █░█ █▀▄▀█
+# ▀▄▀ █░▀░█
+
+# bind = Ctrl+Alt_L, V, submap, passthrough
+# submap = passthrough
+# bind = Ctrl+Alt_L, V, submap, reset
+# submap = reset
