--- a/Configs/.config/hypr/hyde.conf
+++ b/Configs/.config/hypr/hyde.conf
@@ -142,8 +142,16 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0
+    sensitivity = 0.0
     accel_profile = adaptive
     force_no_accel = 0
     numlock_by_default = true
 }
+
+device {
+    name = logitech-k400-plus-1
+    natural_scroll = yes
+    # Add any other touchpad-specific settings here
+    # e.g., disable_while_typing = true, tap-to-click = true [2, 3, 8]
+}
+
