--- a/Configs/.config/hypr/hypridle.conf
+++ b/Configs/.config/hypr/hypridle.conf
@@ -20,7 +20,7 @@ general {
 # Dims the display
 listener {
     timeout = 120
-on-timeout = { brightnessctl -s && brightnessctl s 50% ;}
+    on-timeout = { brightnessctl -s && brightnessctl s 50% ;}
     on-resume = brightnessctl -r
 }
 
@@ -34,7 +34,7 @@ on-timeout = { brightnessctl -s && brightnessctl s 50% ;}
 listener {
     timeout = 600
     on-timeout = hyprctl dispatch dpms off #do not turn off display while media is playing
-    on-resume = hyprctl dispatch dpms on
+    on-resume = { hyprctl dispatch dpms on && dunst ;}
 }
 
 # Suspend
