--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -7,18 +7,26 @@
 
 misc{
     animate_manual_resizes = true
+    animate_mouse_windowdragging = true
     enable_swallow = true
+    vrr = 0
 }
 
 
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
+$wm=Window Management
+$d=[$wm]
+
 # bind = Ctrl+Alt+Shift, R, pass, ^(com\.obsproject\.Studio)$ # toggle obs screen recording // install obs flatpak
 bind = $mainMod+Shift, G, exec, pkill -x rofi || $scrPath/gamelauncher.sh # launch steam game launcher // install steam
 # bind = $mainMod, Period, exec, emote # launch emoji selector // install emote
 # bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
 # bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
+bind = $mainMod, M, exec, betterbird # open betterbird
+bind = $mainMod, Space, exec, workflows.sh select --select  # select workflow
+
 #Blue light filter
 #SUPER+'=' for decreasing blue light
 #SUPER+'-' for increasing blue light
@@ -48,6 +56,10 @@ exec-once = /usr/bin/ollama serve
 windowrulev2 = opacity 0.95 0.95,class:^([Cc]odium)$
 windowrulev2 = opacity 0.95 0.95,class:^(zen)$
 windowrulev2 = opacity 2 2,class:^(FreeTube)$
+windowrulev2 = opacity 2 2,class:^(mpv)$
+windowrulev2 = size 640 360,class:^(mpv)$
+windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
+windowrulev2 = float,class:^(waydroid.*)$
 # windowrulev2 = opacity 0.60 0.60,class:^(steam)$
 # windowrulev2 = opacity 0.60 0.60,class:^(steamwebhelper)$
 # windowrulev2 = opacity 0.60 0.60,class:^(Spotify)$
