--- a/Configs/.config/hypr/themes/theme.conf
+++ b/Configs/.config/hypr/themes/theme.conf
@@ -1,41 +1,34 @@
-#  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
+# // P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Graphite-Mono
+$GTK_THEME = Catppuccin-Latte
 $ICON_THEME = Tela-circle-grey
-$COLOR_SCHEME = prefer-dark
+$COLOR_SCHEME = prefer-light
 
 # Optional: The varibles above will be set automatically when the theme is loaded
 # This exec commands will soon be deprecated
 
 
 general {
-    gaps_in = 8
-    gaps_out = 14
-    border_size = 3
-    col.active_border = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
-    col.inactive_border = rgba(404040cc) rgba(262626cc) 45deg
+    gaps_in = 3
+    gaps_out = 8
+    border_size = 2
+    col.active_border = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.inactive_border = rgba(7287fdcc) rgba(179299cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
-    col.border_inactive = rgba(404040cc) rgba(262626cc) 45deg
-    col.border_locked_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
-    col.border_locked_inactive = rgba(404040cc) rgba(262626cc) 45deg
+    col.border_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.border_locked_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_locked_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
 }
 
 decoration {
-    rounding = 0
+    rounding = 10
+    shadow:enabled = false
 
-    shadow {
-        enabled = yes
-        offset = 4 4
-        range = 0
-        render_power = 4
-        ignore_window = yes
-        color = 0xffFFFFFF
-    }
     blur {
         enabled = yes
         size = 6
@@ -46,4 +39,4 @@ decoration {
     }
 }
 
-layerrule = unset,waybar
+layerrule = blur,waybar
