--- a/Configs/.config/hypr/windowrules.conf
+++ b/Configs/.config/hypr/windowrules.conf
@@ -4,66 +4,36 @@
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
-# Games
-windowrulev2 = fullscreen,class:^[Ss]team_app\d+$
-windowrulev2 = monitor 1,class:^[Ss]team_app_\d+$
-windowrulev2 = workspace 10,class:^[Ss]team_app_\d+$
-workspace = 10, border:false, rounding:false
+# '$&' is a hyde specific shorthand for "override" \\ analogous to a reference
+# This symbol indicates that the following values will override the default configuration
+$&=override
 
-windowrulev2 = opacity 0.85 0.85,class:^(Filen)$
-windowrulev2 = opacity 0.85 0.85,class:^(Fortunate)$
-windowrulev2 = opacity 0.85 0.85,class:^(superProductivity)$
-windowrulev2 = opacity 0.85 0.85,class:^(Eclipse)$
-windowrulev2 = opacity 0.85 0.85,class:^(ONLYOFFICE Desktop Editors)$
-windowrulev2 = opacity 0.85 0.85,class:^(LM Studio)$
-windowrulev2 = opacity 0.85 0.85,class:^(Perplexity AI)$
-windowrulev2 = opacity 0.85 0.85,class:^(libreoffice-writer)$
-windowrulev2 = opacity 0.90 0.90,class:^(Mullvad Browser)$
-windowrulev2 = opacity 0.85 0.85,class:^(ZapZap)$
-windowrulev2 = opacity 0.85 0.85,class:^(thunderbird)$
-windowrulev2 = opacity 0.85 0.85,class:^(betterbird)$
-windowrulev2 = opacity 0.85 0.85,class:^(org.qbittorrent.qBittorrent)$
-windowrulev2 = opacity 0.85 0.85,class:^(org.telegram.desktop)$
-windowrulev2 = opacity 0.85 0.85,class:^(Logseq)$
-windowrulev2 = opacity 0.85 0.85,class:^(anytype)$
-windowrulev2 = opacity 0.85 0.85,class:^(org.kde.okular)$
-windowrulev2 = opacity 0.85 0.85,class:^(anki)$
-windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
-windowrulev2 = opacity 0.90 0.90,class:^([Bb]rave.*)$
-windowrulev2 = opacity 0.90 0.90,class:^(zen)$
-windowrulev2 = opacity 0.90 0.90,class:^(libreoffice.*)$
-windowrulev2 = opacity 0.90 0.90,class:^(Chromium-browser)$
-windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
-windowrulev2 = opacity 0.85 0.85,class:^([Cc]odium)$
-windowrulev2 = opacity 0.85 0.85,class:^([Cc]ode)$
-windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Terminal)$
-windowrulev2 = opacity 0.80 0.80,class:^(Alacritty)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
-windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt6ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(kvantummanager)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(Bitwarden)$
-windowrulev2 = opacity 0.80 0.80,class:^(io.missioncenter.MissionCenter)$
-
-windowrulev2 = opacity 0.80 0.80,class:^([Ss]team)$
-windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
-windowrulev2 = opacity 0.80 0.80,class:^([Ss]potify)$
-windowrulev2 = opacity 0.80 0.80,initialTitle:^(Spotify Free)$
-windowrulev2 = opacity 0.80 0.80,initialTitle:^(Spotify Premium)$
+windowrulev2 = opacity 0.90 $& 0.90 $& 1,class:^(firefox)$
+windowrulev2 = opacity 0.90 $& 0.90 $& 1,class:^(Brave-browser)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-oss)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^([Cc]ode)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-url-handler)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-insiders-url-handler)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(kitty)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(org.kde.dolphin)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(org.kde.ark)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(nwg-look)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(qt5ct)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(qt6ct)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(kvantummanager)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(blueman-manager)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(nm-applet)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(polkit-gnome-authentication-agent-1)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrulev2 = opacity 0.80 $& 0.70 $& 1,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrulev2 = opacity 0.70 $& 0.70 $& 1,class:^([Ss]team)$
+windowrulev2 = opacity 0.70 $& 0.70 $& 1,class:^(steamwebhelper)$
+windowrulev2 = opacity 0.70 $& 0.70 $& 1,class:^([Ss]potify)$
+windowrulev2 = opacity 0.70 $& 0.70 $& 1,initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.70 $& 0.70 $& 1,initialTitle:^(Spotify Premium)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
@@ -77,7 +47,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(ArmCord)$ # ArmCord-Electron
 windowrulev2 = opacity 0.80 0.80,class:^(app.drey.Warp)$ # Warp-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
 windowrulev2 = opacity 0.80 0.80,class:^(yad)$ # Protontricks-Gtk
-windowrulev2 = opacity 0.80 0.80,class:^([Ss]ignal)$ # Signal-Gtk
+windowrulev2 = opacity 0.80 0.80,class:^(Signal)$ # Signal-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(io.github.alainm23.planify)$ # planify-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gtk
@@ -85,12 +55,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(io.gitlab.adhami3310.Impression)$ # Imp
 windowrulev2 = opacity 0.80 0.80,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
 
-windowrulev2 = float,class:^(mpv)$
-windowrulev2 = size 640 360,class:^(mpv)$
-windowrulev2 = float,class:^(org.qbittorrent.qBittorrent)$
-windowrulev2 = float,class:^(waydroid.*)$
 windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
-windowrulev2 = float,class:^(zen)$,title:^(Extension.*)$
 windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
 windowrulev2 = float,title:^(About Mozilla Firefox)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
@@ -109,7 +74,6 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = float,class:^(python3)$
 
 windowrulev2 = float,class:^(Signal)$ # Signal-Gtk
 windowrulev2 = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
@@ -124,7 +88,8 @@ windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 
 # common modals
-windowrule = float,title:^(Open)$
+windowrule = float,initialtitle:^(Open File)$
+windowrule = float,initialTitle:^(Open File)$
 windowrule = float,title:^(Choose Files)$
 windowrule = float,title:^(Save As)$
 windowrule = float,title:^(Confirm to replace files)$
