--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -58,7 +58,7 @@ $d=[$l|Apps]
 bindd = $mainMod, T, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, E, $d file explorer , exec, $EXPLORER
 bindd = $mainMod, C, $d text editor , exec, $EDITOR
-bindd = $mainMod, B, $d web browser , exec, $BROWSER
+bindd = $mainMod, Z, $d web browser , exec, $BROWSER
 bind = $mainMod, O, exec, okular
 bindd = Control Shift, Escape, $d system monitor , exec, $scrPath/sysmonlaunch.sh
 
