--- a/Configs/.config/hypr/themes/colors.conf
+++ b/Configs/.config/hypr/themes/colors.conf
@@ -3,109 +3,109 @@
 
 # Color group 1
 
-$wallbash_pry1 = C8A5C8    # primary color 1
-$wallbash_txt1 = 0B0C0B    # text color 1
-$wallbash_1xa1 = FFCCFF    # accent color 1 for primary color 1
-$wallbash_1xa2 = F0AAF0    # accent color 2 for primary color 1
-$wallbash_1xa3 = E69AE6    # accent color 3 for primary color 1
-$wallbash_1xa4 = C27AC2    # accent color 4 for primary color 1
-$wallbash_1xa5 = A365A3    # accent color 5 for primary color 1
-$wallbash_1xa6 = 8F578F    # accent color 6 for primary color 1
-$wallbash_1xa7 = 7D4B7D    # accent color 7 for primary color 1
-$wallbash_1xa8 = 6B3A6B    # accent color 8 for primary color 1
-$wallbash_1xa9 = 522952    # accent color 9 for primary color 1
+$wallbash_pry1 = 020A1B    # primary color 1
+$wallbash_txt1 = FFFFFF    # text color 1
+$wallbash_1xa1 = 293652    # accent color 1 for primary color 1
+$wallbash_1xa2 = 3A4A6B    # accent color 2 for primary color 1
+$wallbash_1xa3 = 4B5B7D    # accent color 3 for primary color 1
+$wallbash_1xa4 = 57698F    # accent color 4 for primary color 1
+$wallbash_1xa5 = 6579A3    # accent color 5 for primary color 1
+$wallbash_1xa6 = 7A91C2    # accent color 6 for primary color 1
+$wallbash_1xa7 = 9AB2E6    # accent color 7 for primary color 1
+$wallbash_1xa8 = AAC0F0    # accent color 8 for primary color 1
+$wallbash_1xa9 = CCDCFF    # accent color 9 for primary color 1
 
 # in rgba format
-$wallbash_pry1_rgba = rgba(200,165,200,0.95)    # primary color 1
-$wallbash_txt1_rgba = rgba(11,12,11,0.95)    # text color 1
-$wallbash_1xa1_rgba = rgba(255,204,255,0.95)    # accent color 1 for primary color 1
-$wallbash_1xa2_rgba = rgba(240,170,240,0.95)    # accent color 2 for primary color 1
-$wallbash_1xa3_rgba = rgba(230,154,230,0.95)    # accent color 3 for primary color 1
-$wallbash_1xa4_rgba = rgba(194,122,194,0.95)    # accent color 4 for primary color 1
-$wallbash_1xa5_rgba = rgba(163,101,163,0.95)    # accent color 5 for primary color 1
-$wallbash_1xa6_rgba = rgba(143,87,143,0.95)    # accent color 6 for primary color 1
-$wallbash_1xa7_rgba = rgba(125,75,125,0.95)    # accent color 7 for primary color 1
-$wallbash_1xa8_rgba = rgba(107,58,107,0.95)    # accent color 8 for primary color 1
-$wallbash_1xa9_rgba = rgba(82,41,82,0.95)    # accent color 9 for primary color 1
+$wallbash_pry1_rgba = rgba(2,10,27,0.95)    # primary color 1
+$wallbash_txt1_rgba = rgba(255,255,255,0.95)    # text color 1
+$wallbash_1xa1_rgba = rgba(41,54,82,0.95)    # accent color 1 for primary color 1
+$wallbash_1xa2_rgba = rgba(58,74,107,0.95)    # accent color 2 for primary color 1
+$wallbash_1xa3_rgba = rgba(75,91,125,0.95)    # accent color 3 for primary color 1
+$wallbash_1xa4_rgba = rgba(87,105,143,0.95)    # accent color 4 for primary color 1
+$wallbash_1xa5_rgba = rgba(101,121,163,0.95)    # accent color 5 for primary color 1
+$wallbash_1xa6_rgba = rgba(122,145,194,0.95)    # accent color 6 for primary color 1
+$wallbash_1xa7_rgba = rgba(154,178,230,0.95)    # accent color 7 for primary color 1
+$wallbash_1xa8_rgba = rgba(170,192,240,0.95)    # accent color 8 for primary color 1
+$wallbash_1xa9_rgba = rgba(204,220,255,0.95)    # accent color 9 for primary color 1
 
 
 # Color group 2
 
-$wallbash_pry2 = B7859B    # primary color 2
-$wallbash_txt2 = 0F1010    # text color 2
-$wallbash_2xa1 = FFCCE2    # accent color 1 for primary color 2
-$wallbash_2xa2 = F0AAC9    # accent color 2 for primary color 2
-$wallbash_2xa3 = E69ABB    # accent color 3 for primary color 2
-$wallbash_2xa4 = C27A9A    # accent color 4 for primary color 2
-$wallbash_2xa5 = A36580    # accent color 5 for primary color 2
-$wallbash_2xa6 = 8F5770    # accent color 6 for primary color 2
-$wallbash_2xa7 = 7D4B61    # accent color 7 for primary color 2
-$wallbash_2xa8 = 6B3A50    # accent color 8 for primary color 2
-$wallbash_2xa9 = 52293B    # accent color 9 for primary color 2
+$wallbash_pry2 = 05215A    # primary color 2
+$wallbash_txt2 = FFFFFF    # text color 2
+$wallbash_2xa1 = 293652    # accent color 1 for primary color 2
+$wallbash_2xa2 = 3A4A6B    # accent color 2 for primary color 2
+$wallbash_2xa3 = 4B5B7D    # accent color 3 for primary color 2
+$wallbash_2xa4 = 57698F    # accent color 4 for primary color 2
+$wallbash_2xa5 = 657AA3    # accent color 5 for primary color 2
+$wallbash_2xa6 = 7A92C2    # accent color 6 for primary color 2
+$wallbash_2xa7 = 9AB3E6    # accent color 7 for primary color 2
+$wallbash_2xa8 = AAC1F0    # accent color 8 for primary color 2
+$wallbash_2xa9 = CCDDFF    # accent color 9 for primary color 2
 
 # in rgba format
-$wallbash_pry2_rgba = rgba(183,133,155,0.95)    # primary color 2
-$wallbash_txt2_rgba = rgba(15,16,16,0.95)    # text color 2
-$wallbash_2xa1_rgba = rgba(255,204,226,0.95)    # accent color 1 for primary color 2
-$wallbash_2xa2_rgba = rgba(240,170,201,0.95)    # accent color 2 for primary color 2
-$wallbash_2xa3_rgba = rgba(230,154,187,0.95)    # accent color 3 for primary color 2
-$wallbash_2xa4_rgba = rgba(194,122,154,0.95)    # accent color 4 for primary color 2
-$wallbash_2xa5_rgba = rgba(163,101,128,0.95)    # accent color 5 for primary color 2
-$wallbash_2xa6_rgba = rgba(143,87,112,0.95)    # accent color 6 for primary color 2
-$wallbash_2xa7_rgba = rgba(125,75,97,0.95)    # accent color 7 for primary color 2
-$wallbash_2xa8_rgba = rgba(107,58,80,0.95)    # accent color 8 for primary color 2
-$wallbash_2xa9_rgba = rgba(82,41,59,0.95)    # accent color 9 for primary color 2
+$wallbash_pry2_rgba = rgba(5,33,90,0.95)    # primary color 2
+$wallbash_txt2_rgba = rgba(255,255,255,0.95)    # text color 2
+$wallbash_2xa1_rgba = rgba(41,54,82,0.95)    # accent color 1 for primary color 2
+$wallbash_2xa2_rgba = rgba(58,74,107,0.95)    # accent color 2 for primary color 2
+$wallbash_2xa3_rgba = rgba(75,91,125,0.95)    # accent color 3 for primary color 2
+$wallbash_2xa4_rgba = rgba(87,105,143,0.95)    # accent color 4 for primary color 2
+$wallbash_2xa5_rgba = rgba(101,122,163,0.95)    # accent color 5 for primary color 2
+$wallbash_2xa6_rgba = rgba(122,146,194,0.95)    # accent color 6 for primary color 2
+$wallbash_2xa7_rgba = rgba(154,179,230,0.95)    # accent color 7 for primary color 2
+$wallbash_2xa8_rgba = rgba(170,193,240,0.95)    # accent color 8 for primary color 2
+$wallbash_2xa9_rgba = rgba(204,221,255,0.95)    # accent color 9 for primary color 2
 
 # Color group 3
 
-$wallbash_pry3 = 609ACB    # primary color 3
-$wallbash_txt3 = 121110    # text color 3
-$wallbash_3xa1 = CCE8FF    # accent color 1 for primary color 3
-$wallbash_3xa2 = AAD0F0    # accent color 2 for primary color 3
-$wallbash_3xa3 = 9AC3E6    # accent color 3 for primary color 3
-$wallbash_3xa4 = 7AA1C2    # accent color 4 for primary color 3
-$wallbash_3xa5 = 6587A3    # accent color 5 for primary color 3
-$wallbash_3xa6 = 57758F    # accent color 6 for primary color 3
-$wallbash_3xa7 = 4B667D    # accent color 7 for primary color 3
-$wallbash_3xa8 = 3A556B    # accent color 8 for primary color 3
-$wallbash_3xa9 = 293F52    # accent color 9 for primary color 3
+$wallbash_pry3 = 425694    # primary color 3
+$wallbash_txt3 = FFFFFF    # text color 3
+$wallbash_3xa1 = 293352    # accent color 1 for primary color 3
+$wallbash_3xa2 = 3A466B    # accent color 2 for primary color 3
+$wallbash_3xa3 = 4B577D    # accent color 3 for primary color 3
+$wallbash_3xa4 = 57658F    # accent color 4 for primary color 3
+$wallbash_3xa5 = 6574A3    # accent color 5 for primary color 3
+$wallbash_3xa6 = 7A8CC2    # accent color 6 for primary color 3
+$wallbash_3xa7 = 9AACE6    # accent color 7 for primary color 3
+$wallbash_3xa8 = AABBF0    # accent color 8 for primary color 3
+$wallbash_3xa9 = CCD8FF    # accent color 9 for primary color 3
 
 # in rgba format
-$wallbash_pry3_rgba = rgba(96,154,203,0.95)    # primary color 3
-$wallbash_txt3_rgba = rgba(18,17,16,0.95)    # text color 3
-$wallbash_3xa1_rgba = rgba(204,232,255,0.95)    # accent color 1 for primary color 3
-$wallbash_3xa2_rgba = rgba(170,208,240,0.95)    # accent color 2 for primary color 3
-$wallbash_3xa3_rgba = rgba(154,195,230,0.95)    # accent color 3 for primary color 3
-$wallbash_3xa4_rgba = rgba(122,161,194,0.95)    # accent color 4 for primary color 3
-$wallbash_3xa5_rgba = rgba(101,135,163,0.95)    # accent color 5 for primary color 3
-$wallbash_3xa6_rgba = rgba(87,117,143,0.95)    # accent color 6 for primary color 3
-$wallbash_3xa7_rgba = rgba(75,102,125,0.95)    # accent color 7 for primary color 3
-$wallbash_3xa8_rgba = rgba(58,85,107,0.95)    # accent color 8 for primary color 3
-$wallbash_3xa9_rgba = rgba(41,63,82,0.95)    # accent color 9 for primary color 3
+$wallbash_pry3_rgba = rgba(66,86,148,0.95)    # primary color 3
+$wallbash_txt3_rgba = rgba(255,255,255,0.95)    # text color 3
+$wallbash_3xa1_rgba = rgba(41,51,82,0.95)    # accent color 1 for primary color 3
+$wallbash_3xa2_rgba = rgba(58,70,107,0.95)    # accent color 2 for primary color 3
+$wallbash_3xa3_rgba = rgba(75,87,125,0.95)    # accent color 3 for primary color 3
+$wallbash_3xa4_rgba = rgba(87,101,143,0.95)    # accent color 4 for primary color 3
+$wallbash_3xa5_rgba = rgba(101,116,163,0.95)    # accent color 5 for primary color 3
+$wallbash_3xa6_rgba = rgba(122,140,194,0.95)    # accent color 6 for primary color 3
+$wallbash_3xa7_rgba = rgba(154,172,230,0.95)    # accent color 7 for primary color 3
+$wallbash_3xa8_rgba = rgba(170,187,240,0.95)    # accent color 8 for primary color 3
+$wallbash_3xa9_rgba = rgba(204,216,255,0.95)    # accent color 9 for primary color 3
 
 # Color group 4
 
-$wallbash_pry4 = 414959    # primary color 4
-$wallbash_txt4 = FFFFFF    # text color 4
-$wallbash_4xa1 = CCDDFF    # accent color 1 for primary color 4
-$wallbash_4xa2 = AAC1F0    # accent color 2 for primary color 4
-$wallbash_4xa3 = 9AB3E6    # accent color 3 for primary color 4
-$wallbash_4xa4 = 7A92C2    # accent color 4 for primary color 4
-$wallbash_4xa5 = 657AA3    # accent color 5 for primary color 4
-$wallbash_4xa6 = 576A8F    # accent color 6 for primary color 4
-$wallbash_4xa7 = 4B5C7D    # accent color 7 for primary color 4
-$wallbash_4xa8 = 3A4A6B    # accent color 8 for primary color 4
-$wallbash_4xa9 = 293652    # accent color 9 for primary color 4
+$wallbash_pry4 = C392C7    # primary color 4
+$wallbash_txt4 = 0D0E0D    # text color 4
+$wallbash_4xa1 = 4F2952    # accent color 1 for primary color 4
+$wallbash_4xa2 = 673A6B    # accent color 2 for primary color 4
+$wallbash_4xa3 = 794B7D    # accent color 3 for primary color 4
+$wallbash_4xa4 = 8B578F    # accent color 4 for primary color 4
+$wallbash_4xa5 = 9F65A3    # accent color 5 for primary color 4
+$wallbash_4xa6 = BC7AC2    # accent color 6 for primary color 4
+$wallbash_4xa7 = E09AE6    # accent color 7 for primary color 4
+$wallbash_4xa8 = EAAAF0    # accent color 8 for primary color 4
+$wallbash_4xa9 = FBCCFF    # accent color 9 for primary color 4
 
 # in rgba format
-$wallbash_pry4_rgba = rgba(65,73,89,0.95)    # primary color 4
-$wallbash_txt4_rgba = rgba(255,255,255,0.95)    # text color 4
-$wallbash_4xa1_rgba = rgba(204,221,255,0.95)    # accent color 1 for primary color 4
-$wallbash_4xa2_rgba = rgba(170,193,240,0.95)    # accent color 2 for primary color 4
-$wallbash_4xa3_rgba = rgba(154,179,230,0.95)    # accent color 3 for primary color 4
-$wallbash_4xa4_rgba = rgba(122,146,194,0.95)    # accent color 4 for primary color 4
-$wallbash_4xa5_rgba = rgba(101,122,163,0.95)    # accent color 5 for primary color 4
-$wallbash_4xa6_rgba = rgba(87,106,143,0.95)    # accent color 6 for primary color 4
-$wallbash_4xa7_rgba = rgba(75,92,125,0.95)    # accent color 7 for primary color 4
-$wallbash_4xa8_rgba = rgba(58,74,107,0.95)    # accent color 8 for primary color 4
-$wallbash_4xa9_rgba = rgba(41,54,82,0.95)    # accent color 9 for primary color 4
+$wallbash_pry4_rgba = rgba(195,146,199,0.95)    # primary color 4
+$wallbash_txt4_rgba = rgba(13,14,13,0.95)    # text color 4
+$wallbash_4xa1_rgba = rgba(79,41,82,0.95)    # accent color 1 for primary color 4
+$wallbash_4xa2_rgba = rgba(103,58,107,0.95)    # accent color 2 for primary color 4
+$wallbash_4xa3_rgba = rgba(121,75,125,0.95)    # accent color 3 for primary color 4
+$wallbash_4xa4_rgba = rgba(139,87,143,0.95)    # accent color 4 for primary color 4
+$wallbash_4xa5_rgba = rgba(159,101,163,0.95)    # accent color 5 for primary color 4
+$wallbash_4xa6_rgba = rgba(188,122,194,0.95)    # accent color 6 for primary color 4
+$wallbash_4xa7_rgba = rgba(224,154,230,0.95)    # accent color 7 for primary color 4
+$wallbash_4xa8_rgba = rgba(234,170,240,0.95)    # accent color 8 for primary color 4
+$wallbash_4xa9_rgba = rgba(251,204,255,0.95)    # accent color 9 for primary color 4
