--- a/Configs/.config/hypr/themes/theme.conf
+++ b/Configs/.config/hypr/themes/theme.conf
@@ -1,8 +1,8 @@
-# // P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
+#  // P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Catppuccin-Latte
-$ICON_THEME = Tela-circle-grey
-$COLOR_SCHEME = prefer-light
+$GTK_THEME=Catppuccin-Mocha
+$ICON_THEME = Tela-circle-dracula
+$COLOR_SCHEME = prefer-dark
 
 # Optional: The varibles above will be set automatically when the theme is loaded
 # This exec commands will soon be deprecated
@@ -12,17 +12,17 @@ general {
     gaps_in = 3
     gaps_out = 8
     border_size = 2
-    col.active_border = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.inactive_border = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.border_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
-    col.border_locked_active = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.border_locked_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
 }
 
 decoration {
