--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -25,6 +25,7 @@ bind = $mainMod+Shift, G, exec, pkill -x rofi || $scrPath/gamelauncher.sh # laun
 # bind = $mainMod+Alt, XF86MonBrightnessDown, exec, hyprshade on blue-light-filter # enable blue light filter // install hyprshade
 # bind = $mainMod+Alt, XF86MonBrightnessUp, exec, hyprshade off # disable blue light filter // install hyprshade
 bind = $mainMod, M, exec, betterbird # open betterbird
+bind = $mainMod, B, exec, brave # open brave browser
 bind = $mainMod, Space, exec, workflows.sh select --select  # select workflow
 
 #Blue light filter
