--- a/Configs/.config/hypr/workflows.conf
+++ b/Configs/.config/hypr/workflows.conf
@@ -11,9 +11,9 @@
 # It can be gaming mode, work mode, or anything else you can think of.
 # you can also exec a command within the workflow
 
-$WORKFLOW = editing
-$WORKFLOW_ICON = 
-$WORKFLOW_DESCRIPTION = Best for writing and editing // Disables xray and blur that might affect color picking/contrast
-$WORKFLOWS_PATH = ./workflows/editing.conf
+$WORKFLOW = default
+$WORKFLOW_ICON = 
+$WORKFLOW_DESCRIPTION = Unset workflow configuration
+$WORKFLOWS_PATH = ./workflows/default.conf
 source = $WORKFLOWS_PATH
 
