--- a/Configs/.config/hypr/workflows/default.conf
+++ b/Configs/.config/hypr/workflows/default.conf
@@ -3,3 +3,10 @@
 
 $WORKFLOW_ICON=
 $WORKFLOW_DESCRIPTION = Unset workflow configuration
+
+decoration {
+    blur:enabled = 1
+    active_opacity = 0.97 
+    inactive_opacity = 0.97
+    fullscreen_opacity = 1
+}
